--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "caniuse-lite": "^1.0.30001571",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.12.0",
