--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
   },
   "dependencies": {
     "caniuse-lite": "^1.0.30001571",
+    "file-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.12.1"
+    "react-router-dom": "^6.12.1",
+    "url-loader": "^4.1.1"
   }
 }
